Scrollbar issue

--- a/css/main.css
+++ b/css/main.css
@@ -494,6 +494,7 @@ ul.selector{border-radius: 0;  height: auto;font-size: 21px;}
     max-height: 325px;
     min-height: 325px;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 .searchByBuilder .select2-container{margin-top: -5px;}
 .searchByBuilder .select2-container--default .select2-selection--single{height: 51px;}
@@ -528,7 +529,7 @@ body.reinspect #btnReinspectDelete{top: 0;}
 
 #inspectionList #historyReinspection div.action{width: auto;}
 #inspectionList #il_builder_id + span.select2-container{width: 280px !important;}
-#historyReinspection table{display: block;overflow: auto;}
+#historyReinspection table{display: block;overflow: auto;-webkit-overflow-scrolling: touch;}
 /* End inspection */
 
 .twocolumn .select2-container{
@@ -1811,6 +1812,7 @@ ul.historygallery{
 #reinspection #reinspectionScrollWrapper {
     margin-bottom: 15px;
     height: 200px;
+    -webkit-overflow-scrolling: touch;
 }
 #reinspection select#rectified {
     vertical-align: middle;
